--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,142 +1,116 @@
-.html {
-   
-    overflow:hidden;
-    ;
-    
-    }
+/*ESCRITORIO*/
 
-
-@media only screen and (min-width:1000px){
-    #seccionregistro {
-    position: fixed;
-   
-    padding-bottom:1550px;
+ @media only screen and (min-aspect-ratio: 16/9){
+#seccionregistro {
     padding-left: 62%;
-    /*background-color: #ce9f03;*/
     padding-top: 0px;
-    border-color: #337ab7;
+    position: absolute;
+
+}
+}
+/*VERTICAL*/
+
+@media only screen and (max-aspect-ratio:9/16){
+#seccionregistro {
+    padding-top: 50%;
+     padding-top: 50%;
+     padding-left: 20%;
+ width: 100%;
+    position: absolute;
+    }
+    }
+    @media only screen and (max-aspect-ratio:9/16){
+    .inputlog {
     
-    }}
+     
     
-@media only screen and (min-width:1000px){
+
+        height:3vh !important;
+        width:25vh;
+        font-size:110%;
+        border-radius: 0.5vw !important;
+     } 
+    }
+    
+/*--------------------------------------------------------------------*/
+/*--------------------------------------------------------------------*/
+@media only screen and (min-aspect-ratio: 16/9){
         #olvidastecrear {
-        position: fixed;
-     
+        position: absolute;
+   
         padding-top:40px;
-        padding-left: 62%;
+        padding-left: 55%;
         border-color: #337ab7;
 
 
     }}
-
-@media only screen and (max-width:750px){
-        #seccionregistro {
-        
-        position: fixed;
-        padding-top: 70px;
-        padding-left: 32%;
-        
-        /*background-color: #ce9f03;*/
-        border-color: #337ab7;
-        
-        }
-        
-        }
-@media only screen and (max-width:750px){
-            #olvidastecrear {
-     
-            position: fixed;
-            margin-top: 195px;
-            padding-left: 25%;
-         
-            
-            
-        }
-            }
-
-            @media only screen and (min-width:1000px){
-                #botoneinicio {
-               padding-left: 89%;
-               padding-top: 1px;
-               position: fixed;
-               
-               
-               
-               }}
-
-@media only screen and (max-width:750px){
- #botoneinicio {
-padding-left: 40%;
-padding-top: 225px;
-position: fixed;
-resize:both;
-
-}}
-
-@media only screen and (max-width:750px){
-.inputlog {
-    
-    display: block;
-    width: 100%;
-    margin-top:25px;
-    height:5vh !important;
-    font-size: 3vw;
-    border-radius: 0.5vw !important;
- } 
-}
+/*VERTICAL*/
+    @media only screen and (max-aspect-ratio:9/16){
+        #olvidastecrear {
+        position: absolute;
+        padding-top:65%;
+        padding-left: 25%;
+        padding-right: 25%;
+     align-items: center;
 
 
-@media only screen and (max-width:800px){
-#barraredes {
-    position: fixed;
+    }}
+/*--------------------------------------------------------------------*/
+/*--------------------------------------------------------------------*/
+@media only screen and (min-aspect-ratio: 16/9) {
+    #botoneinicio {
+   padding-left: 89%;
+   padding-top:;
+   position: fixed;
+   
+    }}
+/*VERTICAL*/
+    @media only screen and (max-aspect-ratio:9/16) {
+        #botoneinicio {
   
-width:9%;
-height: 100px;
-font-size:10px;
-padding-top:300px; 
-;
-}
+       padding-left:35%;
+       padding-right:35%;
+       padding-top: 70%;
+       position: absolute;
+       
+        }}
+        @media only screen and (max-aspect-ratio:9/16) {
+            #iniciar_sesion {
+                height: 90%;
+                widows: 350px;
+        font-size:2vh ;
 
 
-
-}
-
-@media only screen and (min-width:800px){
+        }}
+/*--------------------------------------------------------------------*/
+/*--------------------------------------------------------------------*/
+@media only screen and (min-aspect-ratio: 16/9){
     #barraredes {
         position: fixed;
       
     width:9%;
     height: 100px;
     font-size:10px;
-    padding-bottom:88px; 
+    padding-bottom:80px; 
     ;
     }
-    
-    
-    
-    }
-
-@media only screen and (max-width:1000px) {
-.spnum {
-
-width: 10%;
-font-size: 1000px;
-height: 10%;
-
 }
 
-
-}
-
-@media only screen and (max-width:800px) {
-    .logfoot {
-
-width: 95%;
-font-size: 10px;
-display: none;
-
+@media only screen and (min-height:1020px){
+    #barraredes {
+        position: fixed;
+      
+    width:9%;
+    height: 100px;
+    font-size:10px;
+    padding-bottom:80px; 
+    ;
     }
 }
+
+____________________________________________________________________________________________
+______________________________________________________________________________________
+__________________________________________________________________________
  /*RESPONSIVE COMENTADO OJOOO HAY MAS AREAS COMENTADAS DENTRO DEL MISMO
 
 @media only screen and (orientation:portrait){
